images added & text written & all alts rewritten & meta tags rewritten

--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Монополія «Без Меж» - Купити з Доставкою (1200+ Замовлень)</title>
+    <title>
+      Шахмати «Подарункові Дерев яні» - Купити з Доставкою (800+ Замовлень)
+    </title>
     <meta
       name="description"
-      content="Купуйте Монополію - гра для друзів (2-6 гравців)✔️ Швидка доставка (1-2 дні), хороша ціна. Перегляньте фотографії та купуйте монополію на подарунок (1200+ замовлень)!"
+      content="Придбайте Шахмати - на подарунок (2 гравці) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте шахи в подарунок (800+ замовлень)!"
     />
     <meta
       name="keywords"
-      content="Монополія, купити Монополію, настільна гра Монополія, Монополія правила, як грати в Монополію, Монополія доставка, настільні ігри, сімейні настільні ігри, Монополія Україна, подарунок Монополія, Монополія ціна, Монополія онлайн замовлення"
+      content="Грати в шахмати, купити шахмати, настільна гра, правила гри, які обрати, доставка шахмат, настільні ігри, сімейні гри, шахмати в Україні, подарунок, ціна, онлайн замовлення."
     />
-    <meta property="og:title" content="Монополія Купити" />
+    <meta property="og:title" content="Шахмати Купити" />
     <meta
       property="og:description"
-      content="Купуйте Монополію - гра для друзів (2-6 гравців)! Швидка доставка (1-2 дні), хороша ціна. Перегляньте фотографії та купуйте монополію на подарунок (1200+ замовлень)!"
+      content="Придбайте Шахмати - на подарунок (2 гравці) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте шахи в подарунок (800+ замовлень)!"
     />
     <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Монополія ТУТ" />
+    <meta property="og:site_name" content="Шахмати ТУТ" />
     <meta property="og:url" content="https://monopolytut.com/" />
     <meta
       property="og:image"
-      content="https://monopolytut.com/image/monopoly_sketch.webp"
+      content="https://shahmatytut.com/image/shahmati_sketch.webp"
     />
     <meta http-equiv="content-language" content="uk-UA" />
     <meta name="robots" content="index, follow" />
@@ -33,17 +35,17 @@
       {
         "@context": "https://schema.org",
         "@type": "Product",
-        "name": "Монополія Банк Без Меж",
-        "image": "/image/monopoly.png",
-        "description": "гра для друзів на вечір, де кожен відчує себе великим бізнесменом",
+        "name": "Шахмати Дерев яні Подарункові",
+        "image": "/image/shahmati_sketch.webp",
+        "description": "гра для початківців та всіх, хто хоче відчути себе розумним та справжнім стратегом",
         "brand": {
           "@type": "Thing",
-          "name": "Monopoly"
+          "name": "Shahmati"
         },
         "offers": {
           "@type": "Offer",
           "priceCurrency": "UAH",
-          "price": "590",
+          "price": "900",
           "itemCondition": "https://schema.org/NewCondition",
           "availability": "https://schema.org/InStock",
           "seller": {
@@ -136,19 +138,19 @@
           <div class="about__content">
             <h3>Кому подарувати?</h3>
             <p itemprop="description">
-              Подарунок для дітей, початківців та дорослих. Покращують фокус,
-              розвивають мислення та сприяють розвитку творчості. Шахмати це
-              гарний подарунок!
+              Обирайте шахмати для початківців, дітей та дорослих. Дерев яні
+              шахмати 2в1 гарно подіходять для подарунку. Ми маємо 800+ продажів
+              саме цих шахматів на подарунок!
             </p>
             <h3>Ціна</h3>
             <p>
               Шахмати коштують 900 грн. Інші продають колекційні по космічним
-              цінам. У нас шахмати для гри ми беремо кількістю, тому і маємо
-              1200+ Замовлень!
+              цінам. У нас шахмати для гри, ми беремо кількістю, тому і маємо
+              800+ Замовлень!
             </p>
           </div>
           <img
-            src="image/monopoly_about.png"
+            src="image/1chess_gift.png"
             class="about__img"
             width="330"
             height="405"
@@ -160,23 +162,23 @@
             <img
               src="image/money.png"
               class="air__money"
-              width="69"
+              width="120"
               height="100"
               loading="lazy"
               alt="гроші"
             />
             <img
-              src="image/money_bag.png"
+              src="image/thinking.png"
               class="air__bag"
-              width="96"
+              width="120"
               height="120"
               loading="lazy"
-              alt="мішок з грошима"
+              alt="думаючий"
             />
             <img
-              src="image/hat.png"
+              src="image/gift.png"
               class="air__hat"
-              width="146"
+              width="120"
               height="130"
               loading="lazy"
               alt="подарункова коробка"
@@ -241,7 +243,7 @@
           </ol>
           <div class="photo__frame">
             <img
-              src="image/image_big.jpg"
+              src="image/1image_big.jpg"
               width="550"
               height="413"
               loading="lazy"
@@ -249,24 +251,22 @@
             />
           </div>
           <div class="photo__content">
-            <h3>В Упаковці</h3>
+            <h3>В Упаковці 32 Фігури:</h3>
             <ul>
-              <li>- 1 ігрове поле</li>
-              <li>- 1 електронний банківський пристрій</li>
-              <li>- 4 фішки</li>
-              <li>- 4 банківські картки</li>
-              <li>- 2 шестигранних кубика</li>
-              <li>- 32 будинки</li>
-              <li>- 12 готелів</li>
-              <li>- правила гри</li>
-              <li>- 33х26мм розмір дошки</li>
+              <li>- 16 пішаків</li>
+              <li>- 4 коні</li>
+              <li>- 4 слони</li>
+              <li>- 4 тури</li>
+              <li>- 2 король</li>
+              <li>- 2 ферзь</li>
+              <li>- 24 шашки</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
         </div>
       </section>
       <section id="question" itemscope itemtype="http://schema.org/FAQPage">
-        <h2 class="question__title">ЯК ГРАТИ</h2>
+        <h2 class="question__title">дерев’яні</h2>
         <dl class="question__list">
           <div
             class="question__item"
@@ -274,48 +274,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Як виграти?</dt>
+            <dt itemprop="name">Пласткові гірші?</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Зосередьтеся на кольорових групах, особливо оранжевих та
-                червоних, будуйте будинки та уникайте розкиданих інвестицій.
+                Пластикові шахи менш якісні та швидше зношуються, у порівнянні з
+                дерев'яними. Вибір на користь "шахмати дерев яні" гарантує
+                тривалий комфорт та вигляд.
               </span>
             </dd>
             <img
-              src="image/win.png"
-              width="67"
-              height="80"
-              loading="lazy"
-              alt="виграш"
-            />
-          </div>
-          <div
-            class="question__item"
-            itemscope
-            itemprop="mainEntity"
-            itemtype="http://schema.org/Question"
-          >
-            <dt itemprop="name">Які правила?</dt>
-            <dd
-              itemprop="acceptedAnswer"
-              itemscope
-              itemtype="http://schema.org/Answer"
-            >
-              <span itemprop="text">
-                Купуйте будинки та готелі, вимагайте орендну плату, торгуйтеся,
-                уникайте банкрутства, переможець — останній гравець з грошима.
-              </span>
-            </dd>
-            <img
-              src="image/rules.png"
+              src="image/chess_stop.png"
               width="76"
               height="80"
               loading="lazy"
-              alt="правила"
+              alt="пластикова фігура"
             />
           </div>
           <div
@@ -324,20 +300,47 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Як роздавати гроші?</dt>
+            <dt itemprop="name">Деревʼяні краще?</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Гроші роздаються рівними частинами: кожен гравець отримує $1500
-                у різних номіналах купюр.
+                Дерев яні шахмати – ідеальний вибір для дітей, а також для
+                подарунку близьким та друзям. Естетика, екологічність та висока
+                якість гарантують гарні відчуття від гри!
+              </span>
+            </dd>
+            <img
+              src="image/chess_love.png"
+              width="76"
+              height="80"
+              loading="lazy"
+              alt="деревʼяна фігура"
+            />
+          </div>
+          <div
+            class="question__item"
+            itemscope
+            itemprop="mainEntity"
+            itemtype="http://schema.org/Question"
+          >
+            <dt itemprop="name">Хто обирав їх?</dt>
+            <dd
+              itemprop="acceptedAnswer"
+              itemscope
+              itemtype="http://schema.org/Answer"
+            >
+              <span itemprop="text">
+                Легендарні гросмейстери, такі як Ро́берт Джеймс «Бо́ббі» Фі́шер,
+                обрали дерев'яні шахи за їх тепло та естетику. Це завжди був
+                вибір майстрів гри."
               </span>
             </dd>
             <img
               src="image/player.png"
-              width="43"
+              width="76"
               height="80"
               loading="lazy"
               alt="гравець"
@@ -349,23 +352,23 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Монополія в економіці?</dt>
+            <dt itemprop="name">Чому звали «Боббі»?</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Одна компанія контролює увесь ринок. Відсутність конкуренції, що
-                може призводити до високих цін і обмеженого вибору для покупців.
+                Ім'я Боббі – це просте скорочення від Роберт, що відзначало його
+                як гравця з особистим стилем та виразністю у світі шахів.
               </span>
             </dd>
             <img
-              src="image/monopoly.png"
+              src="image/fact.png"
               width="73"
               height="80"
               loading="lazy"
-              alt="монополія"
+              alt="гросмейстер"
             />
           </div>
           <div
@@ -374,22 +377,24 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Скільки грошей?</dt>
+            <dt itemprop="name">Які приємніші?</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                У стандартній версії гри загальна сума грошей складає $15,140.
+                Дерев'яні шахмати краще переміщати по дошці через їхню природну
+                текстуру та вагу, що додає відчуття стабільності та задоволення
+                від гри.
               </span>
             </dd>
             <img
-              src="image/cash.png"
+              src="image/feel.png"
               width="92"
               height="80"
               loading="lazy"
-              alt="сума"
+              alt="дотик"
             />
           </div>
           <div
@@ -398,23 +403,23 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Як взяти кредит?</dt>
+            <dt itemprop="name">Деревʼяні тихіші?</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
               itemtype="http://schema.org/Answer"
             >
               <span itemprop="text">
-                Немає офіційної можливості взяти кредит. Гравці мають керувати
-                лише грошима, які вони мають на початку гри.
+                Дерев'яні шахи мають природну абсорбцію звуків, що робить гру
+                тихішою і додає специфічний атмосферний шар до ігрового процесу.
               </span>
             </dd>
             <img
-              src="image/credit.png"
+              src="image/loud.png"
               width="75"
               height="80"
               loading="lazy"
-              alt="кредит"
+              alt="гучно"
             />
           </div>
         </dl>
@@ -443,14 +448,14 @@
               наложеному платежі.
             </p>
             <div class="advice">
-              Ви можете придбати монополію:
+              Ви можете купити шахмати:
               <h6>львів</h6>
               ,
-              <h6>київ</h6>
+              <h6>івано франківськ</h6>
               ,
-              <h6>тернопіль</h6>
+              <h6>київ</h6>
               та в інших містах
-              <h6>України</h6>
+              <h6>Україна</h6>
               .
             </div>
           </div>
