created all pages, changed the main color to a lighter color, changed images

--- a/index.html
+++ b/index.html
@@ -74,13 +74,10 @@
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <span class="lang__item">Подарункові</span> |
-          <a href="/shahi" class="lang__item">Деревʼяні</a>
+          <span class="lang__item">Шахмати Деревʼяні</span> |
+          <a href="shahi.html" class="lang__item">Шахи Деревʼяні</a>
           |
-          <a href="/ruchnoyi-roboti" class="lang__item">
-            <span style="text-decoration: line-through">Гаррі Поттер</span> та
-            Ручної Роботи</a
-          >
+          <a href="ruchnoyi-roboti.html" class="lang__item">Ручної Роботи</a>
         </div>
         <div class="phone">
           <a href="tel:+380669842257" class="phone__item">(066) 98-422-57</a>
@@ -139,7 +136,7 @@
             <h3>Кому подарувати?</h3>
             <p itemprop="description">
               Обирайте шахмати для початківців, дітей та дорослих. Дерев яні
-              шахмати 2в1 гарно подіходять для подарунку. Ми маємо 800+ продажів
+              шахмати гарно подіходять для подарунку. Ми маємо 800+ продажів
               саме цих шахматів на подарунок!
             </p>
             <h3>Ціна</h3>
@@ -150,10 +147,10 @@
             </p>
           </div>
           <img
-            src="image/1chess_gift.png"
+            src="image/2chess_gift.jpg"
             class="about__img"
             width="330"
-            height="405"
+            height="300"
             loading="lazy"
             itemprop="image"
             alt="шахмати подарункові"
@@ -243,7 +240,7 @@
           </ol>
           <div class="photo__frame">
             <img
-              src="image/1image_big.jpg"
+              src="image/image_big.jpg"
               width="550"
               height="413"
               loading="lazy"
@@ -251,15 +248,18 @@
             />
           </div>
           <div class="photo__content">
-            <h3>В Упаковці 32 Фігури:</h3>
+            <h3>В Упаковці:</h3>
             <ul>
+              <li>– Фігури великі з дерева горіха</li>
+              <li>– Планки зі смереки</li>
+              <li>– Малюнок на березовому шпоні</li>
               <li>- 16 пішаків</li>
               <li>- 4 коні</li>
               <li>- 4 слони</li>
               <li>- 4 тури</li>
               <li>- 2 король</li>
               <li>- 2 ферзь</li>
-              <li>- 24 шашки</li>
+              <li>- 52х52мм Розмір шахматної дошки</li>
             </ul>
             <button class="button__buy">КУПИТИ</button>
           </div>
@@ -368,7 +368,7 @@
               width="73"
               height="80"
               loading="lazy"
-              alt="гросмейстер"
+              alt="загадка"
             />
           </div>
           <div
