page under ru request - ready

--- a/index.html
+++ b/index.html
@@ -3,21 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>
-      Шахмати «Подарункові Дерев яні» - Купити з Доставкою (800+ Замовлень)
-    </title>
+    <title>Шахмати «Дерев яні» - Купити з Доставкою (800+ Замовлень)</title>
     <meta
       name="description"
-      content="Придбайте Шахмати - на подарунок (2 гравці) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте шахи в подарунок (800+ замовлень)!"
+      content="Придбайте Шахмати - дерев яні (або подарункові) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
     />
     <meta
       name="keywords"
-      content="Грати в шахмати, купити шахмати, настільна гра, правила гри, які обрати, доставка шахмат, настільні ігри, сімейні гри, шахмати в Україні, подарунок, ціна, онлайн замовлення."
+      content="Шахмати грати , шахмати купити, купити шахмати, правила гри, грати в шахмати, шахмати правила, правила гри в шахмати, як грати в шахмати , шахмати в Україні, купити шахмати дерев яні, ціна, онлайн замовлення."
     />
     <meta property="og:title" content="Шахмати Купити" />
     <meta
       property="og:description"
-      content="Придбайте Шахмати - на подарунок (2 гравці) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Огляньте фото та замовте шахи в подарунок (800+ замовлень)!"
+      content="Придбайте Шахмати - дерев яні (або подарункові) ✔️ Швидка доставка (1-2 дні), вигідна ціна. Перегляньте фото і замовляйте шахмати (800+ замовлень)!"
     />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Шахмати ТУТ" />
@@ -50,7 +48,7 @@
           "availability": "https://schema.org/InStock",
           "seller": {
             "@type": "Organization",
-            "name": "МОНОПОЛІЯ ТУТ"
+            "name": "ШАХМАТИ ТУТ"
           }
         }
       }
@@ -68,14 +66,14 @@
           itemtype="http://schema.org/SiteNavigationElement"
         >
           <a href="#promo" class="nav__item" itemprop="url">КУПИТИ</a>
-          <a href="#about" class="nav__item" itemprop="url">ПОДАРУНКОВІ</a>
+          <a href="#about" class="nav__item" itemprop="url">ДЕРЕВ ЯНІ</a>
           <a href="#photo" class="nav__item" itemprop="url">ФОТО</a>
-          <a href="#question" class="nav__item" itemprop="url">ДЕРЕВʼЯНІ</a>
+          <a href="#question" class="nav__item" itemprop="url">???</a>
           <a href="#delivery" class="nav__item" itemprop="url">ДОСТАВКА</a>
         </nav>
         <div class="lang">
-          <span class="lang__item">Шахмати Деревʼяні</span> |
-          <a href="shahi.html" class="lang__item">Шахи Деревʼяні</a>
+          <span class="lang__item">Шахмати Дерев яні</span> |
+          <a href="shahi.html" class="lang__item">Шахи Дерев яні</a>
           |
           <a href="ruchnoyi-roboti.html" class="lang__item">Ручної Роботи</a>
         </div>
@@ -90,7 +88,7 @@
         <img
           src="image/shahmati_sketch.webp"
           class="promo__img"
-          width="450"
+          width="550"
           height="350"
           itemprop="image"
           alt="шахмати гра"
@@ -126,59 +124,59 @@
             loading="lazy"
             alt="показати"
           />
-          <p>тут можеш обрати «деревʼяні» або «ручної роботи»</p>
+          <p>тут можеш обрати «Дерев яні» або «ручної роботи»</p>
         </div>
       </section>
       <section id="about" itemscope itemtype="http://schema.org/Thing">
-        <h2 class="about__title" itemprop="name">ПОДАРУНКОВІ</h2>
+        <h2 class="about__title" itemprop="name">ДЕРЕВ ЯНІ</h2>
         <div class="wrap about__box">
           <div class="about__content">
-            <h3>Кому подарувати?</h3>
-            <p itemprop="description">
-              Обирайте шахмати для початківців, дітей та дорослих. Дерев яні
-              шахмати гарно подіходять для подарунку. Ми маємо 800+ продажів
-              саме цих шахматів на подарунок!
-            </p>
             <h3>Ціна</h3>
             <p>
               Шахмати коштують 900 грн. Інші продають колекційні по космічним
               цінам. У нас шахмати для гри, ми беремо кількістю, тому і маємо
               800+ Замовлень!
             </p>
+            <h3>Україна</h3>
+            <p itemprop="description">
+              Шахмати для початківців, дітей та дорослих. Дерев яні шахмати, є
+              класичними які гарно підходять всім. Ми маємо 800+ продажів в Укр
+              саме цих подарункових шахматів!
+            </p>
           </div>
           <img
-            src="image/2chess_gift.jpg"
+            src="image/chess_gift.png"
             class="about__img"
             width="330"
             height="300"
             loading="lazy"
             itemprop="image"
-            alt="шахмати подарункові"
+            alt="шахматні фігури"
           />
           <div class="about__air">
             <img
-              src="image/money.png"
+              src="image/select.webp"
               class="air__money"
-              width="120"
+              width="69"
               height="100"
               loading="lazy"
-              alt="гроші"
+              alt="лист з ручкою"
             />
             <img
-              src="image/thinking.png"
+              src="image/king-figure.webp"
               class="air__bag"
-              width="120"
+              width="50"
               height="120"
               loading="lazy"
-              alt="думаючий"
+              alt="Шахматна фігура король"
             />
             <img
-              src="image/gift.png"
+              src="image/gift.webp"
               class="air__hat"
-              width="120"
+              width="50"
               height="130"
               loading="lazy"
-              alt="подарункова коробка"
+              alt="Інцтрмент для виробу"
             />
           </div>
         </div>
@@ -300,7 +298,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Деревʼяні краще?</dt>
+            <dt itemprop="name">Дерев яні краще?</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
@@ -403,7 +401,7 @@
             itemprop="mainEntity"
             itemtype="http://schema.org/Question"
           >
-            <dt itemprop="name">Деревʼяні тихіші?</dt>
+            <dt itemprop="name">Дерев яні тихіші?</dt>
             <dd
               itemprop="acceptedAnswer"
               itemscope
